src/objects/Risk_Indicator_Association__c.object
<CustomObject>
    <fields>
        <fullName>Indicator_Record_Type__c</fullName>
        <formula>Indicator__r.RecordType_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indicator__c</fullName>
        <label>Indicator</label>
        <referenceTo>Indicator__c</referenceTo>
        <relationshipLabel>Associated Risks</relationshipLabel>
        <relationshipName>Risk_Indicator_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>KPI_Lower_Threshold_Currency__c</fullName>
        <label>KPI Lower Threshold Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KPI_Lower_Threshold_Number__c</fullName>
        <label>KPI Lower Threshold Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI_Lower_Threshold_Percent__c</fullName>
        <label>KPI Lower Threshold Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KPI_Upper_Threshold_Currency__c</fullName>
        <label>KPI Upper Threshold Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KPI_Upper_Threshold_Number__c</fullName>
        <description>Upper limit of KPI that if exceeded generates an alert on the Related Risk record</description>
        <label>KPI Upper Threshold Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI_Upper_Threshold_Percent__c</fullName>
        <label>KPI Upper Threshold Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Risk_Owner_Email__c</fullName>
        <formula>Risk__r.Risk_Owner__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <label>Risk</label>
        <referenceTo>Risk__c</referenceTo>
        <relationshipLabel>Associated Indicators</relationshipLabel>
        <relationshipName>Risk_Indicator_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>CASE(Indicator__r.RecordType_Name__c,
&quot;KPI - Currency&quot;, IF(  Indicator__r.Values_Currency__c &lt; KPI_Lower_Threshold_Currency__c , IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;),IF( Indicator__r.Values_Currency__c &gt; KPI_Upper_Threshold_Currency__c, IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;), IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Yellow&quot;)) ),
&quot;KRI - Currency&quot;,IF(  Indicator__r.Values_Currency__c &lt; KPI_Lower_Threshold_Currency__c , IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;),IF( Indicator__r.Values_Currency__c &gt; KPI_Upper_Threshold_Currency__c, IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;), IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Yellow&quot;)) ),
&quot;KPI - Number&quot;, IF(  Indicator__r.Values_Number__c &lt; KPI_Lower_Threshold_Number__c , IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;),IF( Indicator__r.Values_Number__c &gt; KPI_Upper_Threshold_Number__c, IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;), IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Yellow&quot;)) ),
&quot;KRI - Number&quot;, IF(  Indicator__r.Values_Number__c &lt; KPI_Lower_Threshold_Number__c , IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;),IF( Indicator__r.Values_Number__c &gt; KPI_Upper_Threshold_Number__c, IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;), IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Yellow&quot;)) ),
&quot;KPI - Percent&quot;, IF(  Indicator__r.Values_Percent__c &lt; KPI_Lower_Threshold_Percent__c , IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;),IF( Indicator__r.Values_Percent__c &gt; KPI_Upper_Threshold_Percent__c, IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;), IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Yellow&quot;)) ),
&quot;KRI - Percent&quot;, IF(  Indicator__r.Values_Percent__c &lt; KPI_Lower_Threshold_Percent__c , IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;),IF( Indicator__r.Values_Percent__c &gt; KPI_Upper_Threshold_Percent__c, IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;), IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Yellow&quot;)) ),
&quot;KPI - Picklist&quot;, &quot;N/A&quot;,
&quot;KRI - Picklist&quot;, &quot;N/A&quot;,
&quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thresholds__c</fullName>
        <formula>CASE(Indicator__r.RecordType_Name__c,
&quot;KPI - Currency&quot;, TEXT( KPI_Lower_Threshold_Currency__c )&amp;&quot; - &quot;&amp;TEXT( KPI_Upper_Threshold_Currency__c ),
&quot;KRI - Currency&quot;, TEXT( KPI_Lower_Threshold_Currency__c )&amp;&quot; - &quot;&amp;TEXT( KPI_Upper_Threshold_Currency__c ),
&quot;KPI - Number&quot;, TEXT( KPI_Lower_Threshold_Number__c )&amp;&quot; - &quot;&amp;TEXT( KPI_Upper_Threshold_Number__c ),
&quot;KRI - Number&quot;, TEXT( KPI_Lower_Threshold_Number__c )&amp;&quot; - &quot;&amp;TEXT( KPI_Upper_Threshold_Number__c ),
&quot;KPI - Percent&quot;, TEXT( KPI_Lower_Threshold_Percent__c )&amp;&quot; - &quot;&amp;TEXT( KPI_Upper_Threshold_Percent__c ),
&quot;KRI - Percent&quot;, TEXT( KPI_Lower_Threshold_Percent__c )&amp;&quot; - &quot;&amp;TEXT( KPI_Upper_Threshold_Percent__c ),
&quot;KPI - Picklist&quot;, &quot;N/A&quot;,
&quot;KRI - Picklist&quot;, &quot;N/A&quot;,
&quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thresholds</label>
        <type>Text</type>
    </fields>
    <label>Risk/Indicator Association</label>
    <nameField>
        <displayFormat>RIA{00000}</displayFormat>
        <label>Risk/Indicator Association Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk/Indicator Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>